// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / FlexTable / FlexTable with different columns Column Width Sortable Table 1`] = `
.c24 {
  height: 20px;
  box-sizing: border-box;
  display: block;
  width: 26.666666666666668px;
  overflow: hidden;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c3 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  box-sizing: border-box;
}

.c18 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 0 15%;
  -ms-flex: 0 15%;
  flex: 0 15%;
}

.c19 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 0 100px;
  -ms-flex: 0 100px;
  flex: 0 100px;
}

.c23 {
  box-sizing: border-box;
}

.c16 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #6E6E69;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: inline-block;
  vertical-align: middle;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c15 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c22 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c13 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: 0;
}

.c14 {
  width: inherit;
}

.c21 {
  overflow: hidden;
}

.c4 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c4 > *:first-child {
  padding-left: 0;
}

.c4 > *:last-child {
  padding-right: 0;
}

.c20 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c20:hover {
  background: #F5F5F5;
}

.c20 > *:first-child {
  padding-left: 0;
}

.c20 > *:last-child {
  padding-right: 0;
}

.c5 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  border-bottom: 1px solid #282823;
}

.c17 {
  margin-left: 4px;
}

.c8 {
  -webkit-box-pack: inherit;
  -webkit-justify-content: inherit;
  -ms-flex-pack: inherit;
  justify-content: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  width: 100%;
}

.c10 {
  -webkit-box-pack: inherit;
  -webkit-justify-content: inherit;
  -ms-flex-pack: inherit;
  justify-content: inherit;
}

.c7 {
  overflow: hidden;
}

.c2 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Sortable Table With Column Width Set
  </span>
  <div
    className="c2"
    role="table"
  >
    <div
      className="c3 c4 c5"
      role="row"
    >
      <div
        aria-sort="none"
        className="c6 c7"
        role="columnheader"
      >
        <a
          className="c8"
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
        >
          <div
            className="c9 c10"
          >
            <div
              className="c11 c12"
            >
              <div
                className="c13 c14"
              >
                <span
                  className="c15"
                >
                  Flex 1
                </span>
              </div>
            </div>
            <div
              className="c11"
            >
              <svg
                aria-hidden="true"
                className="c16 c17"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </div>
          </div>
        </a>
      </div>
      <div
        aria-sort="none"
        className="c18 c7"
        role="columnheader"
      >
        <a
          className="c8"
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
        >
          <div
            className="c9 c10"
          >
            <div
              className="c11 c12"
            >
              <div
                className="c13 c14"
              >
                <span
                  className="c15"
                >
                  Fifteen percent
                </span>
              </div>
            </div>
            <div
              className="c11"
            >
              <svg
                aria-hidden="true"
                className="c16 c17"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </div>
          </div>
        </a>
      </div>
      <div
        aria-sort="none"
        className="c19 c7"
        role="columnheader"
      >
        <a
          className="c8"
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
        >
          <div
            className="c9 c10"
          >
            <div
              className="c11 c12"
            >
              <div
                className="c13 c14"
              >
                <span
                  className="c15"
                >
                  Loooooooooooooong header set width
                </span>
              </div>
            </div>
            <div
              className="c11"
            >
              <svg
                aria-hidden="true"
                className="c16 c17"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </div>
          </div>
        </a>
      </div>
      <div
        aria-sort="none"
        className="c6 c7"
        role="columnheader"
      >
        <a
          className="c8"
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
        >
          <div
            className="c9 c10"
          >
            <div
              className="c11 c12"
            >
              <div
                className="c13 c14"
              >
                <span
                  className="c15"
                >
                  Default
                </span>
              </div>
            </div>
            <div
              className="c11"
            >
              <svg
                aria-hidden="true"
                className="c16 c17"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </div>
          </div>
        </a>
      </div>
    </div>
    <div
      className="c3 c20"
      role="row"
    >
      <div
        className="c6 c21"
        role="cell"
      >
        <div
          className="c13 c14"
        >
          <span
            className="c22"
          >
            Cell 1-1
          </span>
        </div>
      </div>
      <div
        className="c18 c21"
        role="cell"
      >
        <div
          className="c13 c14"
        >
          <span
            className="c22"
          >
            Very long cell content that should be truncated or ellipsized depepending on your language preferences
          </span>
        </div>
      </div>
      <div
        className="c19 c21"
        role="cell"
      >
        <div
          className="c13 c14"
        >
          <span
            className="c22"
          >
            Cell 1-3
          </span>
        </div>
      </div>
      <div
        className="c6 c21"
        role="cell"
      >
        <div
          className="c13 c14"
        >
          <span
            className="c22"
          >
            Cell 1-4
          </span>
        </div>
      </div>
    </div>
    <div
      className="c3 c20"
      role="row"
    >
      <div
        className="c6 c21"
        role="cell"
      >
        <div
          className="c13 c14"
        >
          <span
            className="c22"
          >
            Cell 2-1
          </span>
        </div>
      </div>
      <div
        className="c18 c21"
        role="cell"
      >
        <div
          className="c13 c14"
        >
          <span
            className="c22"
          >
            Cell 2-2
          </span>
        </div>
      </div>
      <div
        className="c19 c21"
        role="cell"
      >
        <div
          className="c23 c12"
        >
          <div
            className="c13 c14"
          >
            <span
              className="c22"
            >
              Long cell with flag
            </span>
          </div>
          <svg
            className="c24"
            focusable="false"
            role="img"
            viewBox="0 0 640 480"
          >
            <g
              transform="translate(50.082) scale(.9375)"
            >
              <g
                fillRule="evenodd"
                strokeWidth="1pt"
              >
                <path
                  d="M-121.103.302h256V205.1h-256zM-121.103 307.178h256v204.8h-256z"
                  fill="#006aa7"
                />
                <path
                  d="M-121.103 204.984h256v102.4h-256z"
                  fill="#fecc00"
                />
                <path
                  d="M133.843.01h102.4v511.997h-102.4z"
                  fill="#fecc00"
                />
                <path
                  d="M232.995 205.013h460.798v102.4H232.995z"
                  fill="#fecc00"
                />
                <path
                  d="M236.155 307.208h460.797v204.799H236.155zM236.155.302h460.797V205.1H236.155z"
                  fill="#006aa7"
                />
              </g>
            </g>
            <title>
              Sweden
            </title>
          </svg>
        </div>
      </div>
      <div
        className="c6 c21"
        role="cell"
      >
        <div
          className="c13 c14"
        >
          <span
            className="c22"
          >
            Cell 2-4
          </span>
        </div>
      </div>
    </div>
    <div
      className="c3 c20"
      role="row"
    >
      <div
        className="c6 c21"
        role="cell"
      >
        <div
          className="c13 c14"
        >
          <span
            className="c22"
          >
            Cell 3-1
          </span>
        </div>
      </div>
      <div
        className="c18 c21"
        role="cell"
      >
        <div
          className="c13 c14"
        >
          <span
            className="c22"
          >
            Cell 3-2
          </span>
        </div>
      </div>
      <div
        className="c19 c21"
        role="cell"
      >
        <div
          className="c13 c14"
        >
          <span
            className="c22"
          >
            Cell 3-3
          </span>
        </div>
      </div>
      <div
        className="c6 c21"
        role="cell"
      >
        <div
          className="c13 c14"
        >
          <span
            className="c22"
          >
            Cell 3-4
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FlexTable / FlexTable with different columns Column Width Table With Custom Flag Cell 1`] = `
.c18 {
  height: 20px;
  box-sizing: border-box;
  display: block;
  width: 26.666666666666668px;
  overflow: hidden;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c3 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 0 15%;
  -ms-flex: 0 15%;
  flex: 0 15%;
}

.c12 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 0 100px;
  -ms-flex: 0 100px;
  flex: 0 100px;
}

.c16 {
  box-sizing: border-box;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c15 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c17 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: 0;
}

.c9 {
  width: inherit;
}

.c14 {
  overflow: hidden;
}

.c4 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c4 > *:first-child {
  padding-left: 0;
}

.c4 > *:last-child {
  padding-right: 0;
}

.c13 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c13:hover {
  background: #F5F5F5;
}

.c13 > *:first-child {
  padding-left: 0;
}

.c13 > *:last-child {
  padding-right: 0;
}

.c5 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  border-bottom: 1px solid #282823;
}

.c7 {
  overflow: hidden;
}

.c2 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Table With Different Widths and Custom Flag Cell
  </span>
  <div
    className="c2"
    role="table"
  >
    <div
      className="c3 c4 c5"
      role="row"
    >
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10"
          >
            Flex 1
          </span>
        </div>
      </div>
      <div
        className="c11 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10"
          >
            Fifteen percent
          </span>
        </div>
      </div>
      <div
        className="c12 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10"
          >
            Loooooooooooooong header set width
          </span>
        </div>
      </div>
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10"
          >
            Default
          </span>
        </div>
      </div>
    </div>
    <div
      className="c3 c13"
      role="row"
    >
      <div
        className="c6 c14"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c15"
          >
            Cell 1-1
          </span>
        </div>
      </div>
      <div
        className="c11 c14"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c15"
          >
            Very long cell content that should be truncated or ellipsized depepending on your language preferences
          </span>
        </div>
      </div>
      <div
        className="c12 c14"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c15"
          >
            Cell 1-3
          </span>
        </div>
      </div>
      <div
        className="c6 c14"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c15"
          >
            Cell 1-4
          </span>
        </div>
      </div>
    </div>
    <div
      className="c3 c13"
      role="row"
    >
      <div
        className="c6 c14"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c15"
          >
            Cell 2-1
          </span>
        </div>
      </div>
      <div
        className="c11 c14"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c15"
          >
            Cell 2-2
          </span>
        </div>
      </div>
      <div
        className="c12 c14"
        role="cell"
      >
        <div
          className="c16 c17"
        >
          <div
            className="c8 c9"
          >
            <span
              className="c15"
            >
              Long cell with flag
            </span>
          </div>
          <svg
            className="c18"
            focusable="false"
            role="img"
            viewBox="0 0 640 480"
          >
            <g
              transform="translate(50.082) scale(.9375)"
            >
              <g
                fillRule="evenodd"
                strokeWidth="1pt"
              >
                <path
                  d="M-121.103.302h256V205.1h-256zM-121.103 307.178h256v204.8h-256z"
                  fill="#006aa7"
                />
                <path
                  d="M-121.103 204.984h256v102.4h-256z"
                  fill="#fecc00"
                />
                <path
                  d="M133.843.01h102.4v511.997h-102.4z"
                  fill="#fecc00"
                />
                <path
                  d="M232.995 205.013h460.798v102.4H232.995z"
                  fill="#fecc00"
                />
                <path
                  d="M236.155 307.208h460.797v204.799H236.155zM236.155.302h460.797V205.1H236.155z"
                  fill="#006aa7"
                />
              </g>
            </g>
            <title>
              Sweden
            </title>
          </svg>
        </div>
      </div>
      <div
        className="c6 c14"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c15"
          >
            Cell 2-4
          </span>
        </div>
      </div>
    </div>
    <div
      className="c3 c13"
      role="row"
    >
      <div
        className="c6 c14"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c15"
          >
            Cell 3-1
          </span>
        </div>
      </div>
      <div
        className="c11 c14"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c15"
          >
            Cell 3-2
          </span>
        </div>
      </div>
      <div
        className="c12 c14"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c15"
          >
            Cell 3-3
          </span>
        </div>
      </div>
      <div
        className="c6 c14"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c15"
          >
            Cell 3-4
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FlexTable / FlexTable with different columns Different Alignments Table 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c3 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c12 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c15 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c9 {
  width: inherit;
}

.c14 {
  overflow: hidden;
}

.c4 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c4 > *:first-child {
  padding-left: 0;
}

.c4 > *:last-child {
  padding-right: 0;
}

.c13 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c13:hover {
  background: #F5F5F5;
}

.c13 > *:first-child {
  padding-left: 0;
}

.c13 > *:last-child {
  padding-right: 0;
}

.c5 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  border-bottom: 1px solid #282823;
}

.c7 {
  overflow: hidden;
}

.c2 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Table With Different Alignments
  </span>
  <div
    className="c2"
    role="table"
  >
    <div
      className="c3 c4 c5"
      role="row"
    >
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10"
          >
            Left
          </span>
        </div>
      </div>
      <div
        className="c11 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10"
          >
            Right
          </span>
        </div>
      </div>
      <div
        className="c11 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10"
          >
            Right
          </span>
        </div>
      </div>
      <div
        className="c12 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10"
          >
            Center
          </span>
        </div>
      </div>
    </div>
    <div
      className="c3 c13"
      role="row"
    >
      <div
        className="c6 c14"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c15"
          >
            Cell 1-1
          </span>
        </div>
      </div>
      <div
        className="c11 c14"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c15"
          >
            Cell 1-2
          </span>
        </div>
      </div>
      <div
        className="c11 c14"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c15"
          >
            Cell 1-3
          </span>
        </div>
      </div>
      <div
        className="c12 c14"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c15"
          >
            Cell 1-4
          </span>
        </div>
      </div>
    </div>
    <div
      className="c3 c13"
      role="row"
    >
      <div
        className="c6 c14"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c15"
          >
            Cell 2-1
          </span>
        </div>
      </div>
      <div
        className="c11 c14"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c15"
          >
            Cell 2-2
          </span>
        </div>
      </div>
      <div
        className="c11 c14"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c15"
          >
            Cell 2-3
          </span>
        </div>
      </div>
      <div
        className="c12 c14"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c15"
          >
            Cell 2-4
          </span>
        </div>
      </div>
    </div>
    <div
      className="c3 c13"
      role="row"
    >
      <div
        className="c6 c14"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c15"
          >
            Cell 3-1
          </span>
        </div>
      </div>
      <div
        className="c11 c14"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c15"
          >
            Cell 3-2
          </span>
        </div>
      </div>
      <div
        className="c11 c14"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c15"
          >
            Cell 3-3
          </span>
        </div>
      </div>
      <div
        className="c12 c14"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c15"
          >
            Cell 3-4
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FlexTable / FlexTable with different columns Media Columns 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c3 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c11 {
  box-sizing: border-box;
  display: none;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: none;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c14 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c9 {
  width: inherit;
}

.c13 {
  overflow: hidden;
}

.c4 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c4 > *:first-child {
  padding-left: 0;
}

.c4 > *:last-child {
  padding-right: 0;
}

.c12 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c12:hover {
  background: #F5F5F5;
}

.c12 > *:first-child {
  padding-left: 0;
}

.c12 > *:last-child {
  padding-right: 0;
}

.c5 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  border-bottom: 1px solid #282823;
}

.c7 {
  overflow: hidden;
}

.c2 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:976px) {
  .c11 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Table With Columns Hidden Based On Screen Size
  </span>
  <div
    className="c2"
    role="table"
  >
    <div
      className="c3 c4 c5"
      role="row"
    >
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c11 c7"
        hidden={true}
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10"
          >
            Hidden column on mobile
          </span>
        </div>
      </div>
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10"
          >
            Header 3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c3 c12"
      role="row"
    >
      <div
        className="c6 c13"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c14"
          >
            Cell 1-1
          </span>
        </div>
      </div>
      <div
        className="c11 c13"
        hidden={true}
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c14"
          >
            Hidden on mobile
          </span>
        </div>
      </div>
      <div
        className="c6 c13"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c14"
          >
            Cell 1-3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c3 c12"
      role="row"
    >
      <div
        className="c6 c13"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c14"
          >
            Cell 2-1
          </span>
        </div>
      </div>
      <div
        className="c11 c13"
        hidden={true}
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c14"
          >
            Hidden on mobile
          </span>
        </div>
      </div>
      <div
        className="c6 c13"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c14"
          >
            Cell 2-3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c3 c12"
      role="row"
    >
      <div
        className="c6 c13"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c14"
          >
            Cell 3-1
          </span>
        </div>
      </div>
      <div
        className="c11 c13"
        hidden={true}
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c14"
          >
            Hidden on mobile
          </span>
        </div>
      </div>
      <div
        className="c6 c13"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c14"
          >
            Cell 3-3
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
